namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-csip-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-csip-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "public_move-and-improve"
    cloud-platform.justice.gov.uk/application: "HMPPS CSIP"
    cloud-platform.justice.gov.uk/owner: "Move and Improve: move-and-improve@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-csip-api"
    cloud-platform.justice.gov.uk/team-name: "farsight-devs"
    cloud-platform.justice.gov.uk/review-after: ""
